--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+/* PRIMENG IMPORTS TO USE IN STYLE CSS */
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
+
