--- a/client/src/app/auth/pages/login-page/login-page.component.html
+++ b/client/src/app/auth/pages/login-page/login-page.component.html
@@ -1,1 +1,35 @@
-<p>login-page works!</p>
+
+<form class="grid h-full">
+
+  <div class="flex flex-column align-items-center justify-content-center h-auto">
+    <div class="flex align-items-center justify-center">
+      <label for="" class="text-gray-900 title">Iniciar Sesion</label>
+    </div>
+  </div>
+
+  <div class=" p-3 mt-2 h-ful">
+    <div class="field mb-4">
+      <label for="username">Nombre de Usuario</label>
+      <input type="text" pInputText
+        class="text-base text-color surface-overlay p-2 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" />
+    </div>
+
+    <div class="field">
+      <label for="username">Contraseña</label>
+      <input type="password" pInputText
+        class="text-base text-color surface-overlay p-2 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" />
+    </div>
+
+    <div class="grid">
+      <a for="" href="#" class="col-12 aLink">Olvide mi contraseña</a>
+      <a for="" href="#" class="col-12 aLink">Desbloquear cuenta</a>
+    </div>
+
+  </div>
+
+  <div class="flex justify-content-center h-3rem">
+    <button pButton label="Ingresar" class="buttonLogin pt-2 pb-2 px-3"></button>
+  </div>
+
+
+</form>
