--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -2,3 +2,247 @@
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* FONTS */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+
+/* RESTYLE TAG */
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+}
+
+body, html {
+  height: 100%;
+  font-family: 'Roboto', sans-serif;
+}
+
+a {
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  line-height: 1.7;
+  color: #666666;
+  margin: 0px;
+  transition: all 0.4s;
+  -webkit-transition: all 0.4s;
+-o-transition: all 0.4s;
+-moz-transition: all 0.4s;
+}
+
+a:focus {
+  outline: none !important;
+}
+
+a:hover {
+  text-decoration: none;
+color: #a64bf4;
+}
+
+/*---------------------------------------------*/
+h1,h2,h3,h4,h5,h6 {
+  margin: 0px;
+}
+
+p {
+  /* font-family: Poppins-Regular; */
+  font-size: 14px;
+  line-height: 1.7;
+  color: #666666;
+  margin: 0px;
+}
+
+ul, li {
+  margin: 0px;
+  list-style-type: none;
+}
+
+
+/*---------------------------------------------*/
+input {
+  outline: none;
+  border: none;
+}
+
+textarea {
+outline: none;
+border: none;
+}
+
+textarea:focus, input:focus {
+border-color: transparent !important;
+}
+
+/*---------------------------------------------*/
+button {
+  outline: none !important;
+  border: none;
+  background: transparent;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+/*//////////////////////////////////////////////////////////////////
+[ Utility ]*/
+.title{
+  font-family: 'Roboto', sans-serif;
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+}
+
+
+
+/*//////////////////////////////////////////////////////////////////
+[ login ]*/
+.limiter {
+width: 100%;
+margin: 0 auto;
+}
+
+.container-login100 {
+width: 100%;
+display: -webkit-box;
+display: -webkit-flex;
+display: -moz-box;
+display: -ms-flexbox;
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
+align-items: center;
+padding: 15px;
+background-repeat: no-repeat;
+background-position: center;
+background-size: cover;
+}
+
+.wrap-login100 {
+width: 400px;
+height: 520px;
+background: #fff;
+border-radius: 10px;
+overflow: hidden;
+}
+
+
+/*------------------------------------------------------------------
+[ Form ]*/
+
+.login100-form {
+width: 100%;
+}
+
+.login100-form-title {
+display: block;
+font-family: Poppins-Bold;
+font-size: 39px;
+color: #333333;
+line-height: 1.2;
+text-align: center;
+}
+
+
+
+/*------------------------------------------------------------------
+[ Input ]*/
+
+.wrap-input100 {
+width: 100%;
+position: relative;
+border-bottom: 2px solid #d9d9d9;
+}
+
+.label-input100 {
+font-family: Poppins-Regular;
+font-size: 14px;
+color: #333333;
+line-height: 1.5;
+padding-left: 7px;
+}
+
+.input100 {
+font-family: Poppins-Medium;
+font-size: 16px;
+color: #333333;
+line-height: 1.2;
+
+display: block;
+width: 100%;
+height: 55px;
+background: transparent;
+padding: 0 7px 0 43px;
+}
+
+
+/*---------------------------------------------*/
+.focus-input100 {
+position: absolute;
+display: block;
+width: 100%;
+height: 100%;
+top: 0;
+left: 0;
+pointer-events: none;
+}
+
+.focus-input100::after {
+content: attr(data-symbol);
+font-family: Material-Design-Iconic-Font;
+color: #adadad;
+font-size: 22px;
+
+display: -webkit-box;
+display: -webkit-flex;
+display: -moz-box;
+display: -ms-flexbox;
+display: flex;
+align-items: center;
+justify-content: center;
+position: absolute;
+height: calc(100% - 20px);
+bottom: 0;
+left: 0;
+padding-left: 13px;
+padding-top: 3px;
+}
+
+.focus-input100::before {
+content: "";
+display: block;
+position: absolute;
+bottom: -2px;
+left: 0;
+width: 0;
+height: 2px;
+background: #7f7f7f;
+-webkit-transition: all 0.4s;
+-o-transition: all 0.4s;
+-moz-transition: all 0.4s;
+transition: all 0.4s;
+}
+
+
+.input100:focus + .focus-input100::before {
+width: 100%;
+}
+
+.has-val.input100 + .focus-input100::before {
+width: 100%;
+}
+
+.input100:focus + .focus-input100::after {
+color: #a64bf4;
+}
+
+.has-val.input100 + .focus-input100::after {
+color: #a64bf4;
+}
+
+
+
