--- a/client/src/app/auth/layouts/auth-layout/auth-layout.component.html
+++ b/client/src/app/auth/layouts/auth-layout/auth-layout.component.html
@@ -13,14 +13,14 @@
     </div> -->
 
 
-    <div class=" m-0 fullScreen overflow-hidden" style="background-image: url('../../../../assets/images/bg-02.png');">
+    <div id="containerDiv" class=" m-0 fullScreen overflow-hidden">
 
       <div class="menuDiv">
         <shared-menu-auth class="h-3rem"></shared-menu-auth>
       </div>
 
       <div class="container-login100 loginDiv">
-        <div class="bg-white border-round-md p-5">
+        <div class="bg-white border-round-mdp-5 geometryBord">
           <router-outlet></router-outlet>
         </div>
       </div>
