--- a/client/src/app/auth/pages/login-page/login-page.component.html
+++ b/client/src/app/auth/pages/login-page/login-page.component.html
@@ -15,14 +15,19 @@
     </div>
 
     <div class="field">
-      <label for="username">Contraseña</label>
+      <div class="flex justify-content-between">
+        <label for="password">Contraseña</label>
+        <a for="" href="#" class="aLink">Olvide mi contraseña</a>
+      </div>
+
       <input type="password" pInputText
-        class="text-base text-color surface-overlay p-2 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" />
+      class="text-base text-color surface-overlay p-2 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" />
+
     </div>
 
-    <div class="grid">
-      <a for="" href="#" class="col-12 aLink">Olvide mi contraseña</a>
-      <a for="" href="#" class="col-12 aLink">Desbloquear cuenta</a>
+    <div class="flex justify-content-between">
+      <label for="">No puedes ingresar?</label>
+      <a for="" href="#" class="aLink">Desbloquear cuenta</a>
     </div>
 
   </div>
