--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,6 +1,7 @@
 /* PRIMENG IMPORTS TO USE IN STYLE CSS */
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
+@import "primeicons/primeicons.css";
 
 @tailwind base;
 @tailwind components;
@@ -63,7 +64,7 @@ ul, li {
 
 
 /*---------------------------------------------*/
-input {
+/* input {
   outline: none;
   border: none;
 }
@@ -75,7 +76,7 @@ border: none;
 
 textarea:focus, input:focus {
 border-color: transparent !important;
-}
+} */
 
 /*---------------------------------------------*/
 button {
