recover & unblock page Design

--- a/client/src/app/auth/pages/login-page/login-page.component.html
+++ b/client/src/app/auth/pages/login-page/login-page.component.html
@@ -17,7 +17,7 @@
     <div class="field">
       <div class="flex justify-content-between">
         <label for="password">Contraseña</label>
-        <a for="" href="#" class="aLink">Olvide mi contraseña</a>
+        <a for="" routerLink="/auth/recover-password" class="aLink">Olvide mi contraseña</a>
       </div>
 
       <input type="password" pInputText
@@ -27,7 +27,7 @@
 
     <div class="flex justify-content-between">
       <label for="">No puedes ingresar?</label>
-      <a for="" href="#" class="aLink">Desbloquear cuenta</a>
+      <a for="" routerLink="/auth/unblock-user" class="aLink">Desbloquear cuenta</a>
     </div>
 
   </div>
