--- a/client/src/app/auth/pages/recover-page/recover-page.component.html
+++ b/client/src/app/auth/pages/recover-page/recover-page.component.html
@@ -1,4 +1,4 @@
-<div class="grid m-0 w-auto">
+<form class="grid m-0 w-auto">
 
   <div class="col-12 flex justify-content-start">
     <button pButton label="Regresar" icon="pi pi-angle-left" class="buttonLogin pt-2 pb-2 px-3" routerLink="login"></button>
@@ -16,4 +16,4 @@
     <button pButton label="Enviar" class="buttonLogin pt-2 pb-2 px-3"></button>
   </div>
 
-</div>
+</form>
