--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -8,237 +8,101 @@
 @tailwind utilities;
 
 /* FONTS */
+/* Roboto Font */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+/* Poppins Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 /* RESTYLE TAG */
 * {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  overflow: hidden;
 }
 
-body, html {
-  height: 100%;
-  font-family: 'Roboto', sans-serif;
-}
+:root{
+  /* Paleta de Colores */
+  --primary-color: #1E3A8A;
+  --secondary-color: #FFC107;
+  --tertiary-color: #FF5722;
+  --quaternary-color: #FF5722;
+  --quinary-color: #FF5722;
+  --senary-color: #FF5722;
+  --septenary-color: #FF5722;
+  --octonary-color: #FF5722;
+  --nonary-color: #FF5722;
+  --denary-color: #FF5722;
+  --white-color: #FFFFFF;
+  --black-color: #000000;
+  --gray-color: #B4B4B4;
+  --light-gray-color: #E5E5E5;
+  --dark-gray-color: #333333;
+  --light-blue-color: #1E3A8A;
+  --light-yellow-color: #FFC107;
+  --light-red-color: #FF5722;
+  --light-green-color: #4CAF50;
+  --light-purple-color: #9C27B0;
+  --light-orange-color: #FF9800;
+  --light-pink-color: #E91E63;
+  --light-cyan-color: #00BCD4;
+  --light-teal-color: #009688;
+  --light-indigo-color: #3F51B5;
+  --light-lime-color: #CDDC39;
+  --light-amber-color: #FFC107;
+  --light-deep-orange-color: #FF5722;
+  --light-deep-purple-color: #673AB7;
+  --light-blue-grey-color: #607D8B;
+  --light-brown-color: #795548
 
-a {
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  line-height: 1.7;
-  color: #666666;
-  margin: 0px;
-  transition: all 0.4s;
-  -webkit-transition: all 0.4s;
--o-transition: all 0.4s;
--moz-transition: all 0.4s;
-}
+  /* Fuentes */
+  --font-family-roboto: 'Roboto', sans-serif;
+  --font-family-poppins: 'Poppins', sans-serif;
 
-a:focus {
-  outline: none !important;
-}
-
-a:hover {
-  text-decoration: none;
-color: #a64bf4;
-}
-
-/*---------------------------------------------*/
-h1,h2,h3,h4,h5,h6 {
-  margin: 0px;
-}
-
-p {
-  /* font-family: Poppins-Regular; */
-  font-size: 14px;
-  line-height: 1.7;
-  color: #666666;
-  margin: 0px;
-}
-
-ul, li {
-  margin: 0px;
-  list-style-type: none;
-}
+  /* Grosor de Fuentes */
+  --font-weight-light: 100;
+  --font-weight-lighter: 200;
+  --font-weight-normal: 300;
+  --font-weight-medium: 400;
+  --font-weight-bold: 500;
+  --font-weight-bolder: 600;
+  --font-weight-bolder: 700;
 
 
-/*---------------------------------------------*/
-button {
-  outline: none !important;
-  border: none;
-  background: transparent;
-}
+  /* Tamaños de Fuentes */
+  --font-size-xxs: 0.5rem;
+  --font-size-xs: 0.75rem;
+  --font-size-sm: 0.875rem;
+  --font-size-md: 1rem;
+  --font-size-lg: 1.125rem;
+  --font-size-xl: 1.25rem;
+  --font-size-xxl: 1.5rem;
+  --font-size-3xl: 1.875rem;
+  --font-size-4xl: 2.25rem;
+  --font-size-5xl: 3rem;
+  --font-size-6xl: 4rem;
+  --font-size-7xl: 5rem;
+  --font-size-8xl: 6rem;
+  --font-size-9xl: 7rem;
+  --font-size-10xl: 8rem;
+  --font-size-11xl: 9rem;
+  --font-size-12xl: 10rem;
 
-button:hover {
-  cursor: pointer;
-}
-
-/*//////////////////////////////////////////////////////////////////
-[ Utility ]*/
-.title{
-  font-family: 'Roboto', sans-serif;
-  font-size: 30px;
-  font-weight: bold;
-  text-align: center;
-}
-
-.buttonLogin{
-  background-color: #3B82F6;
-  color: white;
-  border-radius: 4px;
-}
-
-.buttonLogin:hover{
-  background-color: #2563EB;
 }
 
 
 
-/*//////////////////////////////////////////////////////////////////
-[ login ]*/
-.limiter {
-width: 100%;
-margin: 0 auto;
-}
-
-.container-login100 {
-width: 100%;
-display: -webkit-box;
-display: -webkit-flex;
-display: -moz-box;
-display: -ms-flexbox;
-display: flex;
-flex-wrap: wrap;
-justify-content: center;
-align-items: center;
-padding: 15px;
-background-repeat: no-repeat;
-background-position: center;
-background-size: cover;
-}
-
-.wrap-login100 {
-width: 400px;
-height: 520px;
-background: #fff;
-border-radius: 10px;
-overflow: hidden;
-}
-
-
-/*------------------------------------------------------------------
-[ Form ]*/
-
-.login100-form {
-width: 100%;
-}
-
-.login100-form-title {
-display: block;
-font-family: Poppins-Bold;
-font-size: 39px;
-color: #333333;
-line-height: 1.2;
-text-align: center;
-}
 
 
 
-/*------------------------------------------------------------------
-[ Input ]*/
-
-.wrap-input100 {
-width: 100%;
-position: relative;
-border-bottom: 2px solid #d9d9d9;
-}
-
-.label-input100 {
-font-family: Poppins-Regular;
-font-size: 14px;
-color: #333333;
-line-height: 1.5;
-padding-left: 7px;
-}
-
-.input100 {
-font-family: Poppins-Medium;
-font-size: 16px;
-color: #333333;
-line-height: 1.2;
-
-display: block;
-width: 100%;
-height: 55px;
-background: transparent;
-padding: 0 7px 0 43px;
-}
 
 
-/*---------------------------------------------*/
-.focus-input100 {
-position: absolute;
-display: block;
-width: 100%;
-height: 100%;
-top: 0;
-left: 0;
-pointer-events: none;
-}
-
-.focus-input100::after {
-content: attr(data-symbol);
-font-family: Material-Design-Iconic-Font;
-color: #adadad;
-font-size: 22px;
-
-display: -webkit-box;
-display: -webkit-flex;
-display: -moz-box;
-display: -ms-flexbox;
-display: flex;
-align-items: center;
-justify-content: center;
-position: absolute;
-height: calc(100% - 20px);
-bottom: 0;
-left: 0;
-padding-left: 13px;
-padding-top: 3px;
-}
-
-.focus-input100::before {
-content: "";
-display: block;
-position: absolute;
-bottom: -2px;
-left: 0;
-width: 0;
-height: 2px;
-background: #7f7f7f;
--webkit-transition: all 0.4s;
--o-transition: all 0.4s;
--moz-transition: all 0.4s;
-transition: all 0.4s;
-}
 
 
-.input100:focus + .focus-input100::before {
-width: 100%;
-}
 
-.has-val.input100 + .focus-input100::before {
-width: 100%;
-}
 
-.input100:focus + .focus-input100::after {
-color: #a64bf4;
-}
 
-.has-val.input100 + .focus-input100::after {
-color: #a64bf4;
-}
+
 
 
 
