--- a/client/src/app/auth/layouts/auth-layout/auth-layout.component.css
+++ b/client/src/app/auth/layouts/auth-layout/auth-layout.component.css
@@ -31,3 +31,11 @@
   bottom: 0;
   width: 100%;
 }
+
+@media (max-width: 600px){
+  .main{
+    display: flex;
+    justify-content: center;
+    padding: 0 10px 0 10px;
+  }
+}
