--- a/client/src/app/auth/pages/recover-page/recover-page.component.css
+++ b/client/src/app/auth/pages/recover-page/recover-page.component.css
@@ -1,1 +1,14 @@
 
+.form{
+  width: 520px;
+  background: var(--white-color);
+  border-radius: 5px;
+}
+
+
+
+@media (max-width: 600px) {
+  .form{
+    width: 100%;
+  }
+}
