--- a/client/src/app/main/layouts/main-layout/main-layout.component.css
+++ b/client/src/app/main/layouts/main-layout/main-layout.component.css
@@ -1,29 +1,77 @@
-.generalContainer{
-  height: 100%;
+.container-main{
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header{
-  height: 10%;
+  top: 0;
+  width: 100%;
+  height: 50px;
+  background: var(--light-blue-color);
   display: flex;
   align-items: center;
-  background-color: greenyellow;
+  padding: 10px;
   justify-content: space-between;
 }
 
-.containerActions{
+
+.logo-container{
   display: flex;
+  width: 200px;
+  height: 60px;
+  padding: 10px;
   align-items: center;
-  justify-content: space-between;
-  background-color: red;
-  width: 250px;
 }
 
-.body{
-  height: 86%;
+.logo{
+  object-fit: contain;
+  cursor: pointer;
 }
+
+.menu-container{
+  width: 425px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.linker{
+  color: var(--white-color);
+  text-decoration: none;
+  font-weight: var(--font-weight-medium);
+  font-size: var(--font-size-md);
+  cursor: pointer;
+}
+
+.linker span{
+  margin-top: 10px;
+}
+
+.linker:hover{
+  color: var(--primary-color);
+}
+
+.container-main .main{
+  flex: 1;
+}
+
+.main{
+  background: var(--white-color);
+}
+
 
 .footer{
-  height: 4%;
-  justify-content: center;
-  color: white;
+  bottom: 0;
+  width: 100%;
+}
+
+
+@media (max-width: 600px){
+  .main{
+    display: flex;
+    justify-content: center;
+    padding: 0 10px 0 10px;
+  }
 }
