--- a/client/src/app/auth/pages/login-page/login-page.component.html
+++ b/client/src/app/auth/pages/login-page/login-page.component.html
@@ -38,7 +38,7 @@
   </div>
 
   <div class="button-container">
-    <button class="button" [disabled]="myForm.invalid">Ingresar</button>
+    <button class="button">Ingresar</button>
   </div>
 
 
