--- a/client/src/app/auth/pages/recover-page/recover-page.component.html
+++ b/client/src/app/auth/pages/recover-page/recover-page.component.html
@@ -17,7 +17,7 @@
     <input type="text" class="email">
   </div>
 
-  <div class="button-send">
+  <div class="button-container">
     <button class="button">Enviar</button>
   </div>
 
