--- a/client/src/app/auth/pages/unblock-page/unblock-page.component.html
+++ b/client/src/app/auth/pages/unblock-page/unblock-page.component.html
@@ -15,7 +15,7 @@
     <input type="text" class="email">
   </div>
 
-  <div class="button-send">
+  <div class="button-container">
     <button class="button">Enviar</button>
   </div>
 
