--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -142,23 +142,24 @@
 }
 
 /* Boton Enviar */
-.button-send{
+.button-container{
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px;
+  margin: 10px 0 10px 0;
 }
 
-.button-send .button{
-  width: 80px;
-  height: 50px;
-  background: var(--primary-color);
-  border-radius: 5px;
+.button-container .button{
+  width: 150px;
+  background-color: var(--primary-color);
   color: var(--white-color);
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 5px;
   transition: 0.3s;
 }
 
-.button-send .button:hover{
+.button-container .button:hover{
   background: var(--light-blue-color);
 }
 
