--- a/client/src/app/auth/pages/recover-page/recover-page.component.html
+++ b/client/src/app/auth/pages/recover-page/recover-page.component.html
@@ -14,7 +14,10 @@
   </div>
 
   <div class="email-container">
-    <input type="text" class="email">
+    <input type="text" class="email" placeholder="Ingrese su email">
+    <span class="material-symbols-outlined">
+      mail
+    </span>
   </div>
 
   <div class="button-container">
