--- a/client/src/app/shared/pages/error404-page/error404-page.component.html
+++ b/client/src/app/shared/pages/error404-page/error404-page.component.html
@@ -1,1 +1,15 @@
-<p>error404-page works!</p>
+<div class="main">
+
+  <label class="title-txt" for="">Opps!</label>
+
+  <label class="msg-txt" for="">Error 404 - Pagina no Encontrada.</label>
+
+  <label class="desc-txt" for="">
+    La pagina que estas buscando probablemente fue removida, no este disponible o quiza no exista.
+  </label>
+
+  <button class="rtn-button">
+    <a router="/home/">Volver a la Pagina Principal</a>
+  </button>
+
+</div>
