--- a/client/src/app/main/layouts/main-layout/main-layout.component.html
+++ b/client/src/app/main/layouts/main-layout/main-layout.component.html
@@ -45,11 +45,11 @@
   </main>
 
 
-  <footer class="footer">
+  <!-- <footer class="footer">
     <shared-footer></shared-footer>
-  </footer>
+  </footer> -->
 
-  <footer id="bottomMenu">
+  <!-- <div id="bottomMenu">
     <button id="light-menu" mat-icon-button [matMenuTriggerFor]="menuLight">
       <mat-icon class="vert-icon">expand_less</mat-icon>
     </button>
@@ -79,7 +79,10 @@
         <span> Salir </span>
       </button>
     </mat-menu>
-  </footer>
-
+  </div> -->
 </div>
+
+<!-- <button class="buttonExample">
+  X
+</button> -->
 
