--- a/client/src/app/main/pages/welcome-page/welcome-page.component.html
+++ b/client/src/app/main/pages/welcome-page/welcome-page.component.html
@@ -17,4 +17,14 @@
 
   </div>
 
+  <div class="landing-phone">
+    <label class="title-txt" for="">Med<label class="sync-txt" for="">Sync</label></label>
+    <label class="welcome-txt" for="">
+      Bienvenido a nuestra plataforma de control y seguimiento para pacientes diabéticos! Aquí encontrarás una herramienta diseñada para facilitar la comunicación y el monitoreo de tu salud junto con tu médico especialista. Estamos comprometidos en brindarte el apoyo y la atención personalizada que necesitas para llevar un estilo de vida saludable mientras gestionas tu diabetes. Juntos, trabajaremos para alcanzar tus metas de bienestar. ¡Comencemos este viaje hacia un futuro más saludable juntos!
+    </label>
+    <div class="img-container">
+      <img class="doc-img" src="../../../../assets/images/doctor_img.png" alt="">
+    </div>
+  </div>
+
 </div>
