--- a/client/src/app/auth/layouts/auth-layout/auth-layout.component.html
+++ b/client/src/app/auth/layouts/auth-layout/auth-layout.component.html
@@ -1,4 +1,4 @@
-<div class="container-auth">
+<!-- <div class="container-auth">
   <header class="header">
     <shared-header-auth></shared-header-auth>
   </header>
@@ -6,11 +6,18 @@
   <main class="main">
     <router-outlet></router-outlet>
   </main>
+</div> -->
 
-  <footer class="footer">
-    <shared-footer></shared-footer>
-  </footer>
+
+
+<div class="auth-container">
+
+  <div class="header">
+    <shared-header-auth></shared-header-auth>
+  </div>
+
+  <div class="main">
+    <router-outlet></router-outlet>
+  </div>
+
 </div>
-
-
-
