--- a/client/src/app/auth/pages/unblock-page/unblock-page.component.css
+++ b/client/src/app/auth/pages/unblock-page/unblock-page.component.css
@@ -2,6 +2,7 @@
   width: 520px;
   background: var(--white-color);
   border-radius: 5px;
+  padding: 10px 10px 0 10px;
 }
 
 @media (max-width: 600px) {
