--- a/client/src/app/main/layouts/main-layout/main-layout.component.css
+++ b/client/src/app/main/layouts/main-layout/main-layout.component.css
@@ -57,10 +57,6 @@
   flex: 1;
 }
 
-.main{
-  background: var(--white-color);
-}
-
 
 .footer{
   bottom: 0;
@@ -72,6 +68,14 @@
 }
 
 #bottomMenu{
+  display: none;
+}
+
+#light-menu{
+  display: none;
+}
+
+.buttonExample{
   display: none;
 }
 
@@ -110,5 +114,21 @@
     height: 35px;
     align-items: center;
     justify-content: center;
+    background-color: transparent;
   }
+
+  .buttonExample{
+    display: block;
+    width: 30px;
+    height: 30px;
+
+    position: relative;
+    left: 50%;
+  }
+
+  .buttonExample{
+    background-color: lightgreen;
+    border-radius: 20px;
+  }
+
 }
