--- a/client/src/app/shared/components/header-auth/header-auth.component.html
+++ b/client/src/app/shared/components/header-auth/header-auth.component.html
@@ -1,3 +1,3 @@
 <div class="header-contaier">
-  <img class="logo-img" src="../../../../assets/icons/LogoMedSync2.png" alt="logoMedSync">
+  <img class="logo-img" src="../../../../assets/icons/DiabControl_Banner_white.svg" alt="logoMedSync">
 </div>
